Second to last commit and push

--- a/Mission6_Barlocker/appsettings.json
+++ b/Mission6_Barlocker/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MovieInputConnection": "Data Source = MoiveInputs.sqlite"
+    "MovieInputConnection": "Data Source = JoelHiltonMovieCollection.sqlite"
   }
 }
